# milka

./: .env.example  .gitignore  Cargo.toml  justfile
.sqlx/: query-6887f782b46aff92d203c73d942b8d1bcb73f6b7945e735009e5bb91980f1ea6.json  query-6e0b25774de3304adda4803723c174e1b4b158e917c569e9078426d9412ffa56.json  query-dab95be2705adb1462bf33830e5e3f43586f62e9f374ee5786404cac3a2af6c3.json
migrations/: 20230309011228_favorites.sql
src/: api.rs  db.rs  log.rs  main.rs
