[package]
name = "milka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
futures-util = "0.3.26"
# indicatif = "0.17.3"
owo-colors = "3.5.0"
reqwest = { version = "0.11.14", features = ["json", "stream"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.153", features = ["derive"] }

[dependencies.tokio]
version = "1.26.0"
features = ["rt-multi-thread", "macros", "fs", "parking_lot", "time"]
