[package]
name = "milka"
version = "0.1.0"
authors = ["fawn <fawn@envs.net>"]
edition = "2021"

[dependencies]
dotenvy = "0.15.6"
futures-util = "0.3.26"
owo-colors = "3.5.0"
reqwest = { version = "0.11.14", features = ["json", "stream"] }
serde = { version = "1.0.153", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }

[dependencies.tokio]
version = "1.26.0"
features = ["rt-multi-thread", "macros", "fs"]
